ajout du path 'update author'
